--- a/src/main/resources/templates/inc.html
+++ b/src/main/resources/templates/inc.html
@@ -17,6 +17,14 @@
 	  				<div class="card-header">
 				    	Tabela
 					</div>
+					
+					
+					<div class="alert alert-success alert-dismissible" role="alert" th:if="${not #strings.isEmpty(mensagem)}">
+				        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				        <span th:text="${mensagem}"></span>
+				    </div>
+					
+					
 					<div class="card-body">
 						<form method="POST" th:object="${tabela}" th:action="@{/}">
 							<div class="form-group">						
